--- a/AppCoder/templates/formularioCliente.html
+++ b/AppCoder/templates/formularioCliente.html
@@ -1,5 +1,20 @@
 {% extends 'padre.html' %}
 
 {% block contenidoMio %}
-<p>formularioCliente</p>
+<p>Formulario Cliente</p>
+<form action="{% url 'formularioCliente' %}" method="post">{% csrf_token %}
+    <div class="form-group">
+      <label>Nombre</label>
+      <input class="nombre" >    
+    </div>
+    <div class="form-group">
+      <label>Apellido</label>
+      <input class="apellido" >    
+    </div>
+    <div class="form-group">
+      <label>Dni</label>
+      <input class="dni" >    
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 {% endblock contenidoMio %}
