--- a/AppCoder/templates/formularioCorrecto.html
+++ b/AppCoder/templates/formularioCorrecto.html
@@ -1,6 +1,7 @@
 {% extends 'padre.html' %}
 
 {% block contenidoMio %}
-<p>Mostrar Formulario</p>
+<p>Formulario Cargado Con Exito</p>
 
+  </form>
 {% endblock contenidoMio %}
