--- a/AppCoder/templates/formularioProducto.html
+++ b/AppCoder/templates/formularioProducto.html
@@ -1,5 +1,20 @@
 {% extends 'padre.html' %}
 
 {% block contenidoMio %}
-<p>formularioProducto</p>
+<p>Formulario Producto</p>
+<form action="{% url 'formularioProducto' %}" method="post">{% csrf_token %}
+    <div class="form-group">
+        <label for="exampleInputEmail1">Nombre</label>
+        <input class="form-control" >
+    </div>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Numero</label>
+        <input class="form-control" >    
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Cantidad</label>
+        <input class="form-control" >    
+      </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 {% endblock contenidoMio %}
