--- a/AppCoder/templates/mostrarformulario.html
+++ b/AppCoder/templates/mostrarformulario.html
@@ -2,5 +2,12 @@
 
 {% block contenidoMio %}
 <p>Mostrar Formulario</p>
+<form action="{% url 'buscar' %}" method="get">
+    <div class="form-group">
+      <label>Nombre</label>
+      <input class="nombre" >    
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
 {% endblock contenidoMio %}
