--- a/AppCoder/templates/formularioProducto.html
+++ b/AppCoder/templates/formularioProducto.html
@@ -4,15 +4,15 @@
 <p>Formulario Producto</p>
 <form action="{% url 'formularioProducto' %}" method="post">{% csrf_token %}
     <div class="form-group">
-        <label for="exampleInputEmail1">Nombre</label>
+        <h2 for="exampleInputEmail1">Nombre</h2>
         <input class="form-control" >
     </div>
     <div class="form-group">
-        <label for="exampleInputEmail1">Numero</label>
+        <h2 for="exampleInputEmail1">Numero</h2>
         <input class="form-control" >    
       </div>
       <div class="form-group">
-        <label for="exampleInputEmail1">Cantidad</label>
+        <h2 for="exampleInputEmail1">Cantidad</h2>
         <input class="form-control" >    
       </div>
     <button type="submit" class="btn btn-primary">Submit</button>
