--- a/AppCoder/templates/mostrarformulario.html
+++ b/AppCoder/templates/mostrarformulario.html
@@ -4,7 +4,8 @@
 <p>Mostrar Formulario</p>
 <form action="{% url 'buscar' %}" method="get">
     <div class="form-group">
-      <label>Nombre</label>
+      <h2>Nombre</h2>
+      <h5>Busca en la tabla cliente</h5>
       <input class="nombre" >    
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
