--- a/AppCoder/templates/formularioCliente.html
+++ b/AppCoder/templates/formularioCliente.html
@@ -4,15 +4,15 @@
 <p>Formulario Cliente</p>
 <form action="{% url 'formularioCliente' %}" method="post">{% csrf_token %}
     <div class="form-group">
-      <label>Nombre</label>
+      <h2>Nombre</h2>
       <input class="nombre" >    
     </div>
     <div class="form-group">
-      <label>Apellido</label>
+      <h2>Apellido</h2>
       <input class="apellido" >    
     </div>
     <div class="form-group">
-      <label>Dni</label>
+      <h2>Dni</h2>
       <input class="dni" >    
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
