--- a/AppCoder/templates/formularioCliente.html
+++ b/AppCoder/templates/formularioCliente.html
@@ -1,20 +1,20 @@
 {% extends 'padre.html' %}
 
 {% block contenidoMio %}
-<p>Formulario Cliente</p>
+<p class="FuturaFont">Formulario Cliente</p>
 <form action="{% url 'formularioCliente' %}" method="post">{% csrf_token %}
-    <div class="form-group">
+    <div class="form-group FuturaFont">
       <h2>Nombre</h2>
       <input class="nombre" >    
     </div>
-    <div class="form-group">
+    <div class="form-group FuturaFont">
       <h2>Apellido</h2>
-      <input class="apellido" >    
+      <input class="apellido " >    
     </div>
-    <div class="form-group">
+    <div class="form-group FuturaFont">
       <h2>Dni</h2>
       <input class="dni" >    
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary FuturaFont">Submit</button>
 </form>
 {% endblock contenidoMio %}
