--- a/AppCoder/templates/formularioProducto.html
+++ b/AppCoder/templates/formularioProducto.html
@@ -1,20 +1,20 @@
 {% extends 'padre.html' %}
 
 {% block contenidoMio %}
-<p>Formulario Producto</p>
+<p class="FuturaFont">Formulario Producto</p>
 <form action="{% url 'formularioProducto' %}" method="post">{% csrf_token %}
-    <div class="form-group">
-        <h2 for="exampleInputEmail1">Nombre</h2>
-        <input class="form-control" >
+    <div class="form-group FuturaFont">
+        <h2>Nombre</h2>
+        <input class="nombre" >
     </div>
-    <div class="form-group">
-        <h2 for="exampleInputEmail1">Numero</h2>
-        <input class="form-control" >    
+    <div class="form-group FuturaFont">
+        <h2>Numero</h2>
+        <input class="numero" >    
       </div>
-      <div class="form-group">
-        <h2 for="exampleInputEmail1">Cantidad</h2>
-        <input class="form-control" >    
+      <div class="form-group FuturaFont">
+        <h2>Cantidad</h2>
+        <input class="cantidad" >    
       </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary FuturaFont">Submit</button>
   </form>
 {% endblock contenidoMio %}
