--- a/AppCoder/templates/padre.html
+++ b/AppCoder/templates/padre.html
@@ -21,7 +21,10 @@
 
     <body>
         <!-- Navigation-->
-        <nav class="navbar fondo1 static-top ">
+        <div>
+            <h1 class="row justify-content-center FuturaFont fondo" >Planet Express</h1>
+        </div>
+        <nav class="navbar fondo1 static-top  ">
             <div class="container fondo1 ">
                 <a class="navbar-brand FuturaFont" href="{% url 'formularioCliente' %}">Clientes</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'formularioProducto' %}">Products</a>
