--- a/AppCoder/templates/formularioCliente.html
+++ b/AppCoder/templates/formularioCliente.html
@@ -5,15 +5,15 @@
 <form action="{% url 'formularioCliente' %}" method="post">{% csrf_token %}
     <div class="form-group FuturaFont">
       <h2>Nombre</h2>
-      <input class="nombre" >    
+      <input name="nombre" type="text" >    
     </div>
     <div class="form-group FuturaFont">
       <h2>Apellido</h2>
-      <input class="apellido " >    
+      <input name="apellido" type="text" >    
     </div>
     <div class="form-group FuturaFont">
       <h2>Dni</h2>
-      <input class="dni" >    
+      <input name="dni" type="number" >    
     </div>
     <button type="submit" class="btn btn-primary FuturaFont">Submit</button>
 </form>
