--- a/AppCoder/templates/mostrarformulario.html
+++ b/AppCoder/templates/mostrarformulario.html
@@ -6,7 +6,7 @@
     <div class="form-group FuturaFont">
       <h2>Nombre</h2>
       <h5>Busca en la tabla cliente</h5>
-      <input name="nombre" type="text">    
+      <input name="nombre">    
     </div>
     <button type="submit" class="btn btn-primary FuturaFont">Submit</button>
 </form>
