--- a/AppCoder/templates/resultadoB.html
+++ b/AppCoder/templates/resultadoB.html
@@ -2,7 +2,7 @@
 
 {% block contenidoMio %}
 <p class="FuturaFont">Resultado Busqueda</p>
-<h1>{ficha}</h1>
+{{ficha}}
 
     
 {% endblock contenidoMio %}
