--- a/AppCoder/templates/padre.html
+++ b/AppCoder/templates/padre.html
@@ -27,9 +27,13 @@
         <nav class="navbar fondo1 static-top  ">
             <div class="container fondo1 ">
                 <a class="navbar-brand FuturaFont" href="{% url 'formularioCliente' %}">Clientes</a>
-                <a class="navbar-brand FuturaFont" href="{% url 'formularioProducto' %}">Products</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'formularioProducto' %}">Productos</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'formularioEnvio' %}">Envios</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'mostrarformulario' %}">Buscar</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'about' %}">About</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'listarProductos' %}">Listar Productos</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'login' %}">Login</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'registro' %}">Registrar</a>
             </div>
         </nav>
         <!-- Masthead-->
