--- a/AppCoder/templates/inicio.html
+++ b/AppCoder/templates/inicio.html
@@ -2,6 +2,7 @@
 
 {% block contenidoMio %}
 <p class="FuturaFont">Bienvenidos a Planet Express</p>
+<img src="{{url_avatar}}" alt="avatar">
 
 {{mensaje}}
 {% endblock contenidoMio %}
