--- a/AppCoder/templates/about.html
+++ b/AppCoder/templates/about.html
@@ -3,7 +3,7 @@
 {% block contenidoMio %}
 <div>
     <p class="FuturaFont">About</p>
-    <p>Mi nombre es Lucas Troncoso, tengo 38 años, son analista de sistemas,
+    <p>Mi nombre es Lucas Troncoso, tengo 38 años, soy analista de sistemas,
       trabajo en una multinacional en dos sectores en simultaneo, en pago a
       proveedores y en el sector de RPA donde se desarrolla software de automatizacion.
     </p>
