--- a/AppCoder/templates/padre.html
+++ b/AppCoder/templates/padre.html
@@ -30,11 +30,15 @@
                 <a class="navbar-brand FuturaFont" href="{% url 'formularioProducto' %}">Productos</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'formularioEnvio' %}">Envios</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'mostrarformulario' %}">Buscar</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'listarClientes' %}">Listar Clientes</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'listarProductos' %}">Listar Productos</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'listarEnvios' %}">Listar Envios</a>
                 <a class="navbar-brand FuturaFont" href="{% url 'registro' %}">Registrar</a>
-                <a class="navbar-brand FuturaFont" href="{% url 'editarPerfil' %}">Editar Perfil</a>
-
+                
+               
                 {% if user.is_authenticated %}
+                <a class="navbar-brand FuturaFont" href="{% url 'editarPerfil' %}">Editar Perfil</a>
+                <a class="navbar-brand FuturaFont" href="{% url 'agregarAvatar' %}"> Agregar Avatar</a>
                 {% if url_avatar %}
                     <img src="{{url_avatar}}" height="10px" alt="avatar">            
                 {% endif %}
